Fixed parallax issue on mobile

--- a/src/sections/hero.css
+++ b/src/sections/hero.css
@@ -12,7 +12,8 @@
     flex-direction: column;
     gap: 3em;
     transform: translateZ(-1px) scale(2.2);
-    
+    transform-style: preserve-3d;
+
 }
 
 .heading__container--hero {
@@ -33,7 +34,7 @@
     text-align: center;
     width: 100%;
     word-spacing: 5px;
-
+    height: 2.5em;
 }
 
 .heading-wrapper {
@@ -66,10 +67,9 @@
 .heading__info {
     font-family: 'General Sans';
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     align-self: center;
     text-align: center;
-    margin-left: 4px;
 }
 
 .bold {
@@ -162,7 +162,54 @@
 
 @media only screen and (max-width: 430px) {
     .section--hero {
-        transform: translateZ(-1px) scale(1);
+        transform: translateZ(-1px) scale(2);
+        transform-style: preserve-3d;
 
     } 
+
+    .heading__container--hero {
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-grow: 0; 
+        width: 100%;
+        gap:1em;
+        margin-bottom: 3em;
+    }
+
+    .heading__hero--carl, .heading__hero--wiren {
+        font-size: 1.5rem;
+        letter-spacing: -1px;  
+    }
+
+    .heading__hero--frontend, .heading__hero--developer {
+        font-family: 'General Sans Bold';
+        font-size: 4rem;
+        line-height: 4rem;
+        letter-spacing: -4px;     
+    }
+
+    .heading__info {
+        font-size: 1rem;
+    }
+
+    .button-container {
+        padding-top: 1.5em;
+        display: flex;
+        gap: 3em;
+        width: 80%;
+        justify-content: center;
+     }
+    
+     .button {
+        font-size: 1.1rem;
+        font-family: 'General Sans Regular';
+        border: 3px solid var(--yellow);
+        min-width: 40%;
+        width: 30%;
+        height: 1.8em;
+        text-align: center;
+     }
 }
